--- a/index.html
+++ b/index.html
@@ -3,36 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu site</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Meu Site</title>
 </head>
 <body>
-    <header>
-        <img src="img/logo.png" alt="logo vida full-stack">
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Portfólio</a></li>
-                <li><a href="#">Contato</a></li>
-                <li class="button-cv"><a href="#">Currículo</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <h1>Hello, World!</h1>
-        <h2>Landing Page</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil dolor eos odio quasi iure aut libero, laboriosam itaque excepturi labore adipisci esse illo dolorum rem et, eaque, voluptate natus magni.</p>
-
-        <a href="#">Saiba Mais</a>
-    </main>
-    <div>
-        <img src="img/pessoas-construindo-pc.png" alt="pessoas construindo">
-    </div>
-    <aside>
-        <li><img src="img/logo-facebook.png" alt="link facebook"></li>
-        <li><img src="img/logo-insta.png" alt="link instagram"></li>
-        <li><img src="img/logo-twitter.png" alt="link twitter"></li>
-    </aside>
+    
 </body>
 </html>
