--- a/index.html
+++ b/index.html
@@ -6,6 +6,58 @@
     <title>Meu Site</title>
 </head>
 <body>
-    
+    <!--Header-->
+    <header>
+        <img src="img/logo.png" alt="logo vida full-stack">
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>Sobre</li>
+                <li>Portfólio</li>
+                <li>Contato</li>
+                <li>Currículo</li>
+            </ul>
+        </nav>
+    </header>
+    <!--End Header-->
+
+    <!--Main-->
+    <main>
+        <section>
+            <h1>Web Designer</h1>
+                <h2>Landing Page</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae suscipit ea amet quia. Nobis, accusamus corporis. Dignissimos aspernatur ab molestias ipsum veritatis ullam ducimus, aperiam tenetur sed delectus doloribus iure!</p>
+            <a href="#">Saiba Mais</a>
+
+            <div>
+                <img src="img/pessoas-construindo-pc.png" alt="pessoas construindo">
+            </div>
+        </section>
+    </main>
+    <!--End Main-->
+
+    <!--Footer-->
+    <footer>
+        <!--Redes Sociais-->
+        <ul>
+            <li>
+                <a href="#">
+                    <img src="img/logo-facebook.png" alt="icon facebook link">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="img/logo-insta.png" alt="icon instagram link">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="img/logo-twitter.png" alt="icon twitter link">
+                </a>
+            </li>
+        </ul>
+        <!--End Redes Sociais-->
+    </footer>
+    <!--End Footer-->
 </body>
 </html>
