--- a/index.html
+++ b/index.html
@@ -8,23 +8,35 @@
 </head>
 <body>
     <!--Header-->
-    <header>
-        <img src="img/logo.png" alt="logo vida full-stack">
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>Sobre</li>
-                <li>Portfólio</li>
-                <li>Contato</li>
-                <li>Currículo</li>
-            </ul>
-        </nav>
+    <header class="conteiner">
+        <section class="row">
+            <img src="img/logo.png" alt="logo vida full-stack">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">Sobre</a>
+                    </li>
+                    <li>
+                        <a href="#">Portfólio</a>
+                    </li>
+                    <li>
+                        <a href="#">Contato</a>
+                    </li>
+                    <li>
+                        <a href="#" class="btn btn-laranja">Currículo</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
     </header>
     <!--End Header-->
 
     <!--Main-->
-    <main>
-        <section>
+    <main class="conteiner">
+        <section class="row">
             <h1>Web Designer</h1>
                 <h2>Landing Page</h2>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae suscipit ea amet quia. Nobis, accusamus corporis. Dignissimos aspernatur ab molestias ipsum veritatis ullam ducimus, aperiam tenetur sed delectus doloribus iure!</p>
