--- a/index.html
+++ b/index.html
@@ -36,15 +36,16 @@
 
     <!--Main-->
     <main class="conteiner">
-        <section class="row">
-            <h1>Web Designer</h1>
-                <h2>Landing Page</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae suscipit ea amet quia. Nobis, accusamus corporis. Dignissimos aspernatur ab molestias ipsum veritatis ullam ducimus, aperiam tenetur sed delectus doloribus iure!</p>
-            <a href="#">Saiba Mais</a>
-
-            <div>
-                <img src="img/pessoas-construindo-pc.png" alt="pessoas construindo">
-            </div>
+        <section class="row sobre-webdesigner">
+            <article>
+                <h1>Web<br>Designer</h1>
+                    <h2>Landing Page</h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae suscipit ea amet quia. Nobis, accusamus corporis. Dignissimos aspernatur ab molestias ipsum veritatis ullam ducimus, aperiam tenetur sed delectus doloribus iure!</p>
+                <a href="#" class="btn btn-laranja">Saiba Mais</a>
+            </article>
+                <div>
+                   <img src="img/pessoas-construindo-pc.png" alt="pessoas construindo">
+                </div>
         </section>
     </main>
     <!--End Main-->
