--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Site</title>
     <link rel="stylesheet" href="styles/estilo.css">
+    <link rel="stylesheet" href="styles/responsive.css">
 </head>
 <body>
     <!--Header-->
@@ -51,7 +52,7 @@
     <!--End Main-->
 
     <!--Footer-->
-    <footer>
+    <footer class="conteiner">
         <!--Redes Sociais-->
         <ul>
             <li>
